--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,20 @@
-# .env
-ENVIRONMENT=true
-HOSTNAMET=localhost
-HOSTNAMEP=production-server
+# tipo de entorno, puede ser development, test o production
+ENVIRONMENT=development
+
+# configuración de la base de datos development
+HOSTNAME_D=EgTqpmV0SYw6MDBqQKxD9llQL1pLSjlwQitVUkFwYlQ4eVlTOGc9PQ==
+USERNAME_D=M8SqgGhyRp6D5X92RfsdK1JFSWRpdlZMaTV4L0gvc0RDM3Z1dXc9PQ==
+PASSWORD_D=XjNzDXGuVk8TmKFL+8wzSnZjbXNKZDVIY2xpQWZFcFFjMWpRdlE9PQ==
+DATABASE_D=c09EZPoxl2mmOPUmRGX/aW5MbVVKTXV4SXErMlhuSDRtVUVSRUE9PQ==
+
+# configuración de la base de datos test
+HOSTNAME_T=localhost
+USERNAME_T=local-user
+PASSWORD_T=local-password
+DATABASE_T=local-database
+
+# configuración de la base de datos production
+HOSTNAME_P=localhost
+USERNAME_P=local-user
+PASSWORD_P=local-password
+DATABASE_P=local-database
