--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -4,18 +4,27 @@ Options -Indexes
 
 	RewriteEngine On
 
+	RewriteBase /backend
+
 	RewriteCond %{SERVER_PORT} 80
 	RewriteCond %{HTTPS} !on
-	RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,QSA,L]
+	#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,QSA,L]
 
 	RewriteCond %{SCRIPT_FILENAME} !-d
 	RewriteCond %{SCRIPT_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
 
+    RewriteCond %{REQUEST_URI} !^/backend/auth.php$
+
     RewriteRule ^(.*)$ index.php [QSA,L]
 
 </IfModule>
+
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
+
 
 ServerSignature On
 
